infra/k8s/stats-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats
  template:
    metadata:
      labels:
        app: stats
    spec:
      containers:
        - name: stats
          image: crazyphoton/abhyaas-stats
---
apiVersion: v1
kind: Service
metadata:
  name: stats-srv
spec:
  selector:
    app: stats
  ports:
    - name: stats
      protocol: TCP
      port: 3000
      targetPort: 3000
