infra/k8s/webapp-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: crazyphoton/abhyaas-webapp
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-srv
spec:
  selector:
    app: webapp
  ports:
    - name: webapp
      protocol: TCP
      port: 3000
      targetPort: 3000
